k8s/manifests-d3b7bc/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-d3b7bc
  namespace: journee
  labels:
    app: journee-d3b7bc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-d3b7bc
  template:
    metadata:
      labels:
        app: journee-d3b7bc
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-d3b7bc
          image: gcr.io/my-docker-471807/journee:d3b7bc-f3a521
          ports:
            - containerPort: 3000
