k8s/manifests-d3b7bc/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-d3b7bc
  namespace: journee
spec:
  selector:
    app: journee-d3b7bc
  ports:
    - port: 80
      targetPort: 3000
